--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     />
     
     <title>Meme Generator</title>
+
+    <!-- Google Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
